# ar-ai-exe

./: .dockerignore  .gitignore  AGENTS.md  CONTEXT.md  PRODUCTION_ROADMAP.md  README.md  docker-compose.yml  package-lock.json  package.json  skills-lock.json  sonar-project.properties
.cursor/: PR-DEV-TO-MAIN.md  close-issues.py  commit-msg.txt  commit-msg2.txt  commit-msg3.txt  commit-msg4.txt  flutter-sha.json  issues.json  parse-issues-detail.js  parse-issues.js  parse-prs.js  sonar-sha.json  uv-sha.json
.github/workflows/: backend-ci.yml  frontend-ci.yml  mobile-ci.yml  sonarcloud.yml
.husky/: pre-push
backend/: .dockerignore  .env.example  Dockerfile  README.md  e2e_smoke.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  desktop_entrypoint.py  main.py
backend/tests/: test_asset_version_migration.py  test_asset_versions.py  test_auth_token.py  (+16 more)
deploy/: .env.example  Caddyfile  backend.dev.env  backend.env.example  ufw-allow-web.sh
desktop/: .gitignore  README.md  frontend.env.desktop.example  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
docs/: api-contract.md  architecture.md  editor-integration-guide.md  implementation-flows.md  mobile-backend-contract.md  project-architecture-review.md  scan-guidelines.md  sonarcloud.md  tech-stack-overview.md  vps-android-deployment.md
frontend/: .env.example  Dockerfile  package-lock.json  package.json
mobile/: README.md  plan.md  pubspec.yaml
scripts/: sonarcloud_issue_export.py
(+145 files in other folders)
